--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 #title{
     padding-top: 20%;
-    color: blueviolet;
+    color: black;
     text-align: center;
-    font-weight:bold ;
+    font-weight:bolder ;
     font-family: Arial, sans-serif;
+    font-size: 70px;
 }
 
 .list{
@@ -35,7 +36,7 @@
     text-align: center;
     text-decoration: dashed;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: bolder;
     font-size: 50px;
 }
 
@@ -60,21 +61,18 @@
 h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
-}
-
-p, li{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-weight: bolder;
 }
 
 body{
-    background-color: ;
     background-image:url(images/Grenada.jpg);
     background-repeat:repeat;
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    font-weight: bolder;
 }
 
 button {
-    position: ;
     margin-top: 100%;
 }
